welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: ':' expected but ')' found.
def remplirTableau(t){
                    ^Array1:15: error: identifier expected but '}' found.
}
^